--- a/about.html
+++ b/about.html
@@ -89,9 +89,9 @@
                         fire that warms your heart! Perhaps you are interested to know more about Vetr. It is nothing
                         but a shadow, which speaks of the light of the sun. Vetr is in love, and someone who is in love
                         has nothing to say other than the story of his love. Furthermore, someone in love has nothing to
-                        show other than the beautiful face of his beloved
+                        show other than the beautiful face of his beloved.
                     </p>
-                    <hr class="col-5" style="border: white 2px solid;">
+                    <hr class="col-2" style="border: white 2px solid;">
                     <img src="images/vetr_logo.png" width="80px" alt="">
 
                 </span>
@@ -99,7 +99,7 @@
         </div>
 
     </div>
-    <footer class="page-footer font-small blue pt-4 " style="margin-top: 50px;">
+    <footer class="page-footer text-white font-small blue pt-4 " style="margin-top: 50px;">
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">Copyright © VetrMusic 2020 | All Rights Reserved.
         </div>
