--- a/music.html
+++ b/music.html
@@ -127,6 +127,7 @@
                 opacity: 0.8;
             }
         }
+        
     </style>
 </head>
 
@@ -250,7 +251,6 @@
                         </div>
                     </div>
                     <img src="images/cover2-back.jpg" width="700px" class="cover" alt="">
-
                     <div class="">
                         <div id='player' style="position: relative;">
                             <div class="text-secondary" style="margin-top: -35px;margin-bottom: -13px;">
@@ -285,7 +285,6 @@
                         </div>
                     </div>
                     <img src="images/cover3-back.jpg" width="700px" class="cover" alt="">
-
                     <div class="">
                         <div id='player' style="position: relative;">
                             <div class="text-secondary" style="margin-top: -35px;margin-bottom: -13px;">
@@ -326,10 +325,9 @@
                 </div>
             </div>
         </div>
-
     </div>
     <!-- Footer -->
-    <footer class="page-footer font-small blue pt-4 " style="margin-top: 50px;">
+    <footer class="page-footer font-small blue pt-4 text-white" style="margin-top: 50px;">
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">Copyright © VetrMusic 2020 | All Rights Reserved.
         </div>
@@ -342,7 +340,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
-
     <script>
         function update(player) {
             var music_player = document.getElementById(player);
@@ -398,7 +395,5 @@
             }
         }
     </script>
-
 </body>
-
 </html>
