--- a/wi.html
+++ b/wi.html
@@ -60,9 +60,9 @@
         </div>
         <div class="content">
             <div class="col-md-4 mx-auto">
-                <img src="images/WIHYNLyricpage.jpg" style="width: 100%;" alt="">
+                <img src="images/WIHYNLyricpagecover.jpg" style="width: 100%;" alt="">
                 <div class="bg-dark text-center text-white">
-                    <p class="font-weight-bold pt-2 mb-0">Drink Some Water - Single</p>
+                    <p class="font-weight-bold pt-2 mb-0">When I Hear Your Name</p>
                     <p class="pb-2 mb-0" style="font-size:small;">Choose Music Service</p>
                 </div>
                 <div class="bg-white mt-0 pt-0 border-bottom">
@@ -72,7 +72,7 @@
                         style="font-size: 0.8rem; width: 110px; padding: 5px;margin: 5px;">Play</a>
                 </div>
                 <div class="bg-white mt-0 pt-0 border-bottom">
-                    <img class="p-2 pl-3" src="images/SpotifyStream.webp" alt="">
+                    <img class="p-1 pl-3" src="images/SpotifyStream.webp" alt="">
                     <a href="https://open.spotify.com/artist/3OcSvvEkZToGZ2PU2awKxm?si=vvX5LokaRMG0UQfX7rVG6Q"
                         class="btn btn-primary float-right border-dark bg-secondary"
                         style="font-size: 0.8rem; width: 110px; padding: 5px;margin: 5px;">Play</a>
@@ -84,7 +84,7 @@
                         style="font-size: 0.8rem; width: 110px; padding: 5px;margin: 5px;">Download</a>
                 </div>
                 <div class="bg-white mt-0 pt-0 border-bottom">
-                    <img class="p-3 pl-3" src="images/YoutubeStream.webp" alt="">YouTube
+                    <img class="pl-3" style="padding: 13px;" src="images/YoutubeStream.webp" alt="">YouTube
                     <a href="https://www.youtube.com/channel/UCRyQssp0O63Y8dc79LIjV8g"
                         class="btn btn-primary float-right border-dark bg-secondary"
                         style="font-size: 0.8rem; width: 110px; padding: 5px;margin: 5px;">Watch</a>
@@ -101,7 +101,7 @@
 
     </div>
     <!-- Footer -->
-    <footer class="footer font-small blue pt-4 " style="margin-top: 240px;">
+    <footer class="footer font-small text-white blue pt-4 " style="margin-top: 240px;">
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">Copyright © VetrMusic 2020 | All Rights Reserved.
         </div>
