--- a/contact.html
+++ b/contact.html
@@ -91,7 +91,7 @@
         </div>
 
     </div>
-    <footer class="page-footer font-small blue pt-4 " style="margin-top: 50px;">
+    <footer class="page-footer text-white font-small blue pt-4 " style="margin-top: 100px;">
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">Copyright © VetrMusic 2020 | All Rights Reserved.
         </div>
