--- a/dsw.html
+++ b/dsw.html
@@ -101,7 +101,7 @@
 
     </div>
     <!-- Footer -->
-    <footer class="page-footer font-small blue pt-4 " style="margin-top: 240px;">
+    <footer class="page-footer text-white font-small blue pt-4 " style="margin-top: 240px;">
         <!-- Copyright -->
         <div class="footer-copyright text-center py-3">Copyright © VetrMusic 2020 | All Rights Reserved.
         </div>
