--- a/video.html
+++ b/video.html
@@ -163,7 +163,7 @@
             </div>
         </div>
         <!-- Footer -->
-        <footer class="page-footer font-small blue pt-4 " style="margin-top: 50px;">
+        <footer class="page-footer text-white font-small blue pt-4 " style="margin-top: 50px;">
             <!-- Copyright -->
             <div class="footer-copyright text-center py-3">Copyright © VetrMusic 2020 | All Rights Reserved.
             </div>
