--- a/lyric.html
+++ b/lyric.html
@@ -21,6 +21,19 @@
                 font-size: 10px;
             }
         }
+
+        .card-transparent:hover .card-img-overlay {
+            opacity: 1 !important;
+            transition: .4s ease;
+            margin-left: 15px;
+            margin-right: 15px;
+        }
+
+        .card-img-overlay {
+            opacity: 0;
+            background-color: rgba(55, 125, 201, 0.8);
+            transition: .4s ease;
+        }
     </style>
 </head>
 
@@ -59,17 +72,6 @@
                 </div>
             </nav>
         </div>
-        <style>
-            .card-transparent:hover .card-img-overlay {
-                opacity: 1 !important;
-                transition: .2s ease;
-            }
-
-            .card-img-overlay {
-                opacity: 0;
-                background-color: rgba(0, 0, 0, 0.7);
-            }
-        </style>
         <div class="content">
             <div class="col-6 mx-auto text-center">
                 <h1 class="text-white pt-2" style="font-size: 2.5vw;">Latest Lyric</h1>
@@ -80,7 +82,7 @@
                     <img class="card-img" src="images/Cover_Lyric1.png" alt="Card image">
                     <div class="card-img-overlay">
                         <h3 class="card-title pb-5 mt-5 pt-5">Drink Some Water</h3>
-                        <hr class="col-2 mt-5 mb-5" style="border: white 6px solid;">
+                        <hr class="col-2 mt-5 mb-5" style="border: white 3px solid;">
                         <p class="pt-5">Choose a language</p>
                         <p>to see lyric of the music:</p>
                         <a class="pr-5"
@@ -100,7 +102,7 @@
                     <img class="card-img" src="images/Cover_Lyric2.png" alt="Card image">
                     <div class="card-img-overlay ">
                         <h3 class="card-title pb-5 mt-5 pt-5">My Three-Year-Old Hero</h3>
-                        <hr class="col-2 mt-5 mb-5" style="border: white 6px solid;">
+                        <hr class="col-2 mt-5 mb-5" style="border: white 3px solid;">
                         <p class="pt-5">Choose a language</p>
                         <p>to see lyric of the music:</p>
                         <a class="pr-5" href="  " target="_blank">Eng
@@ -115,7 +117,7 @@
                     <img class="card-img" src="images/Cover_Lyric3.png" alt="Card image">
                     <div class="card-img-overlay ">
                         <h3 class="card-title pb-5 mt-5 pt-5">After You</h3>
-                        <hr class="col-2 mt-5 mb-5" style="border: white 6px solid;">
+                        <hr class="col-2 mt-5 mb-5" style="border: white 3px solid;">
                         <p class="pt-5">Choose a language</p>
                         <p>to see lyric of the music:</p>
                         <a class="pr-5" href="" target="_blank">Eng
@@ -130,7 +132,7 @@
                     <img class="card-img" src="images/Cover_Lyric4.png" alt="Card image">
                     <div class="card-img-overlay ">
                         <h3 class="card-title pb-5 mt-5 pt-5">When I Hear Your Name</h3>
-                        <hr class="col-2 mt-5 mb-5" style="border: white 6px solid;">
+                        <hr class="col-2 mt-5 mb-5" style="border: white 3px solid;">
                         <p class="pt-5">Choose a language</p>
                         <p>to see lyric of the music:</p>
                         <a class="pr-5" href="  " target="_blank">Eng
