--- a/music.html
+++ b/music.html
@@ -113,9 +113,11 @@
             margin-top: -420px;
             margin-right: -70px;
             opacity: 0.8;
+            transition: .3s ease;
         }
         .cover:hover {
             opacity: 0.6;
+            transition: .3s ease;
             
         }
 
@@ -125,6 +127,7 @@
                 margin-top: -410px;
                 margin-right: -200px;
                 opacity: 0.8;
+                transition: .3s ease;
             }
         }
         
