--- a/video.html
+++ b/video.html
@@ -101,7 +101,7 @@
                         allowfullscreen
                     ></iframe>
                     <div class="bg-dark text-white p-2 mb-5">
-                        Drink Some Water
+                        My Three-Year-Old Hero
                         <a
                             href="https://www.aparat.com/v/QOCEh"
                             class="btn btn-primary float-right p-1"
@@ -123,7 +123,7 @@
                         allowfullscreen
                     ></iframe>
                     <div class="bg-dark text-white p-2 mb-5">
-                        Drink Some Water
+                        After You
                         <a
                             href="https://www.aparat.com/v/zky0G"
                             class="btn btn-primary float-right p-1"
@@ -145,7 +145,7 @@
                         allowfullscreen
                     ></iframe>
                     <div class="bg-dark text-white p-2">
-                        Drink Some Water
+                        When I Hear Your Name
                         <a
                             href="https://www.aparat.com/v/zky0G"
                             class="btn btn-primary float-right p-1"
