--- a/dsw.html
+++ b/dsw.html
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse pt-md-1" id="navbarText">
                     <ul class="navbar-nav mt-1 mx-auto">
                         <li class="nav-item px-3">
-                            <a class="nav-link active" href="index.html">HOME</a>
+                            <a class="nav-link " href="index.html">HOME</a>
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link" href="music.html">MUSIC</a>
@@ -72,7 +72,7 @@
                         style="font-size: 0.8rem; width: 110px; padding: 5px;margin: 5px;">Play</a>
                 </div>
                 <div class="bg-white mt-0 pt-0 border-bottom">
-                    <img class="p-2 pl-3" src="images/SpotifyStream.webp" alt="">
+                    <img class="p-1 pl-3" src="images/SpotifyStream.webp" alt="">
                     <a href="https://open.spotify.com/album/12jSFdo1JRTDCFKb95kKc5?si=JK6nXlgOQsSNmK1tZLeczA"
                         class="btn btn-primary float-right border-dark bg-secondary"
                         style="font-size: 0.8rem; width: 110px; padding: 5px;margin: 5px;">Play</a>
@@ -84,7 +84,7 @@
                         style="font-size: 0.8rem; width: 110px; padding: 5px;margin: 5px;">Download</a>
                 </div>
                 <div class="bg-white mt-0 pt-0 border-bottom">
-                    <img class="p-3 pl-3" src="images/YoutubeStream.webp" alt="">YouTube
+                    <img class="pl-3" style="padding: 13px;" src="images/YoutubeStream.webp" alt="">YouTube
                     <a href="https://youtu.be/P4fZPHgXAxM"
                         class="btn btn-primary float-right border-dark bg-secondary"
                         style="font-size: 0.8rem; width: 110px; padding: 5px;margin: 5px;">Watch</a>
