--- a/wi.html
+++ b/wi.html
@@ -36,7 +36,7 @@
                 <div class="collapse navbar-collapse pt-md-1" id="navbarText">
                     <ul class="navbar-nav mt-1 mx-auto">
                         <li class="nav-item px-3">
-                            <a class="nav-link active" href="index.html">HOME</a>
+                            <a class="nav-link " href="index.html">HOME</a>
                         </li>
                         <li class="nav-item px-3">
                             <a class="nav-link" href="music.html">MUSIC</a>
