--- a/video.html
+++ b/video.html
@@ -1,185 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Vetr</title>
-        <link
-            rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-            crossorigin="anonymous"
-        />
-        <style>
-            body {
-                background-color: black;
-            }
-        </style>
-    </head>
 
-    <body>
-        <div class="container">
-            <div class="header text-center pt-4 pb-2">
-                <img src="images/vetr_logo.png" width="120px" class="" alt="" />
-                <nav class="navbar navbar-expand-lg navbar-dark bg-none">
-                    <button
-                        class="navbar-toggler"
-                        type="button"
-                        data-toggle="collapse"
-                        data-target="#navbarText"
-                        aria-controls="navbarText"
-                        aria-expanded="false"
-                        aria-label="Toggle navigation"
-                    >
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div
-                        class="collapse navbar-collapse pt-md-1"
-                        id="navbarText"
-                    >
-                        <ul class="navbar-nav mt-1 mx-auto">
-                            <li class="nav-item px-3">
-                                <a class="nav-link" href="index.html">HOME</a>
-                            </li>
-                            <li class="nav-item px-3">
-                                <a class="nav-link " href="music.html">MUSIC</a>
-                            </li>
-                            <li class="nav-item px-3">
-                                <a class="nav-link active" href="video.html"
-                                    >VIDEO</a
-                                >
-                            </li>
-                            <li class="nav-item px-3">
-                                <a class="nav-link" href="lyric.html">LYRIC</a>
-                            </li>
-                            <li class="nav-item px-3">
-                                <a class="nav-link" href="about.html">ABOUT</a>
-                            </li>
-                            <li class="nav-item px-3">
-                                <a class="nav-link" href="contact.html"
-                                    >CONTACT</a
-                                >
-                            </li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
-            <div class="content mb-5">
-                <div class="col-6 mx-auto text-center">
-                    <h1 class="text-white" style="font-size: 2.5vw;">
-                        Latest Video
-                    </h1>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vetr</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+    <style>
+        body {
+            background-color: black;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container">
+        <div class="header text-center pt-4 pb-2">
+            <img src="images/vetr_logo.png" width="120px" class="" alt="" />
+            <nav class="navbar navbar-expand-lg navbar-dark bg-none">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse pt-md-1" id="navbarText">
+                    <ul class="navbar-nav mt-1 mx-auto">
+                        <li class="nav-item px-3">
+                            <a class="nav-link" href="index.html">HOME</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link " href="music.html">MUSIC</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link active" href="video.html">VIDEO</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link" href="lyric.html">LYRIC</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link" href="about.html">ABOUT</a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link" href="contact.html">CONTACT</a>
+                        </li>
+                    </ul>
                 </div>
-                <div class="col-md-8 mx-auto pt-3 pb-3" style="background-color: #676767;">
-                    <iframe
-                        style="width: inherit; height: 410px;"
-                        src="https://www.youtube.com/embed/P4fZPHgXAxM"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen
-                    ></iframe>
-                    <div class="bg-dark text-white p-2 mb-5">
-                        Drink Some Water
-                        <a
-                            href="https://www.aparat.com/v/C2Qyj"
-                            class="btn btn-primary float-right p-1"
-                            style="font-size: 0.7rem;"
-                            >Aparat</a
-                        >
-                        <a
-                            href=""
-                            class="btn btn-primary ml-md-5 mr-1 float-right p-1"
-                            style="font-size: 0.7rem;"
-                            >Download</a
-                        >
-                    </div>
-                    <iframe
-                        style="width: inherit; height: 410px;"
-                        src="https://www.youtube.com/embed/dIUcpSj4yhk"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen
-                    ></iframe>
-                    <div class="bg-dark text-white p-2 mb-5">
-                        My Three-Year-Old Hero
-                        <a
-                            href="https://www.aparat.com/v/QOCEh"
-                            class="btn btn-primary float-right p-1"
-                            style="font-size: 0.7rem;"
-                            >Aparat</a
-                        >
-                        <a
-                            href=""
-                            class="btn btn-primary ml-md-5 mr-1 float-right p-1"
-                            style="font-size: 0.7rem;"
-                            >Download</a
-                        >
-                    </div>
-                    <iframe
-                        style="width: inherit; height: 410px;"
-                        src="https://www.youtube.com/embed/o9gm2JlkiOE"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen
-                    ></iframe>
-                    <div class="bg-dark text-white p-2 mb-5">
-                        After You
-                        <a
-                            href="https://www.aparat.com/v/zky0G"
-                            class="btn btn-primary float-right p-1"
-                            style="font-size: 0.7rem;"
-                            >Aparat</a
-                        >
-                        <a
-                            href=""
-                            class="btn btn-primary ml-md-5 mr-1 float-right p-1"
-                            style="font-size: 0.7rem;"
-                            >Download</a
-                        >
-                    </div>
-                    <iframe
-                        style="width: inherit; height: 410px;"
-                        src="https://www.youtube.com/embed/rSKGMQh0cNw"
-                        frameborder="0"
-                        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen
-                    ></iframe>
-                    <div class="bg-dark text-white p-2">
-                        When I Hear Your Name
-                        <a
-                            href="https://www.aparat.com/v/zky0G"
-                            class="btn btn-primary float-right p-1"
-                            style="font-size: 0.7rem;"
-                            >Aparat</a
-                        >
-                        <a
-                            href=""
-                            class="btn btn-primary ml-md-5 mr-1 float-right p-1"
-                            style="font-size: 0.7rem;"
-                            >Download</a
-                        >
-                    </div>
+            </nav>
+        </div>
+        <div class="content mb-5">
+            <div class="col-6 mx-auto text-center">
+                <h1 class="text-white" style="font-size: 2.5vw;">
+                    Latest Video
+                </h1>
+            </div>
+            <div class="col-md-8 mx-auto pt-3 pb-3" style="background-color: #676767;">
+                <iframe style="width: inherit; height: 410px;" src="https://www.youtube.com/embed/rSKGMQh0cNw"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <div class="bg-dark text-white p-2 mb-5">
+                    When I Hear Your Name
+                    <a href="https://www.aparat.com/v/zky0G" class="btn btn-primary float-right p-1"
+                        style="font-size: 0.7rem;">Aparat</a>
+                    <a href="" class="btn btn-primary ml-md-5 mr-1 float-right p-1"
+                        style="font-size: 0.7rem;">Download</a>
+                </div>
+                <iframe style="width: inherit; height: 410px;" src="https://www.youtube.com/embed/P4fZPHgXAxM"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <div class="bg-dark text-white p-2 mb-5">
+                    Drink Some Water
+                    <a href="https://www.aparat.com/v/C2Qyj" class="btn btn-primary float-right p-1"
+                        style="font-size: 0.7rem;">Aparat</a>
+                    <a href="" class="btn btn-primary ml-md-5 mr-1 float-right p-1"
+                        style="font-size: 0.7rem;">Download</a>
+                </div>
+                <iframe style="width: inherit; height: 410px;" src="https://www.youtube.com/embed/dIUcpSj4yhk"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <div class="bg-dark text-white p-2 mb-5">
+                    My Three-Year-Old Hero
+                    <a href="https://www.aparat.com/v/QOCEh" class="btn btn-primary float-right p-1"
+                        style="font-size: 0.7rem;">Aparat</a>
+                    <a href="" class="btn btn-primary ml-md-5 mr-1 float-right p-1"
+                        style="font-size: 0.7rem;">Download</a>
+                </div>
+                <iframe style="width: inherit; height: 410px;" src="https://www.youtube.com/embed/o9gm2JlkiOE"
+                    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+                <div class="bg-dark text-white p-2">
+                    After You
+                    <a href="https://www.aparat.com/v/zky0G" class="btn btn-primary float-right p-1"
+                        style="font-size: 0.7rem;">Aparat</a>
+                    <a href="" class="btn btn-primary ml-md-5 mr-1 float-right p-1"
+                        style="font-size: 0.7rem;">Download</a>
                 </div>
             </div>
         </div>
-        <!-- Footer -->
-        <footer class="page-footer text-white font-small blue pt-4 " style="margin-top: 50px;">
-            <!-- Copyright -->
-            <div class="footer-copyright text-center py-3">Copyright © VetrMusic 2020 | All Rights Reserved.
-            </div>
-            <!-- Copyright -->
+    </div>
+    <!-- Footer -->
+    <footer class="page-footer text-white font-small blue pt-4 " style="margin-top: 50px;">
+        <!-- Copyright -->
+        <div class="footer-copyright text-center py-3">Copyright © VetrMusic 2020 | All Rights Reserved.
+        </div>
+        <!-- Copyright -->
 
-        </footer>
-        <!-- Footer -->
-        <script
-            src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-            integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-            integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-            crossorigin="anonymous"
-        ></script>
-    </body>
+    </footer>
+    <!-- Footer -->
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
