--- a/lyric.html
+++ b/lyric.html
@@ -34,6 +34,14 @@
             background-color: rgba(55, 125, 201, 0.8);
             transition: .4s ease;
         }
+        a {
+            color: black;
+        }
+        a:hover {
+            text-decoration: none;
+            color: rgb(31, 31, 31);
+
+        }
     </style>
 </head>
 
